change the structure of network files